--- a/index.html
+++ b/index.html
@@ -244,17 +244,23 @@
                 
                 const fetchListings = async () => {
                     try {
-                        console.log('📦 İş ilanları yükleniyor...');
-                        const response = await fetch(`https://teppek.com/api/listings-simple?lat=${userLocation.lat}&lng=${userLocation.lng}`);
+                        console.log('🌍 Dünya genelinden iş ilanları yükleniyor...');
+                        const response = await fetch(`https://teppek.com/api/listings-multi-smart?lat=${userLocation.lat}&lng=${userLocation.lng}`);
                         const result = await response.json();
                         
                         if (result.success && result.listings) {
                             console.log(`✅ ${result.count} adet iş ilanı yüklendi!`);
-                            console.log(`📍 Kaynaklar: Adzuna: ${result.sources?.adzuna || 0}, Test: ${result.sources?.internal || 0}`);
-                            console.log(`⏰ Son güncelleme: ${new Date(result.lastUpdated).toLocaleString('tr-TR')}`);
-                            console.log(`⏳ Sonraki güncelleme: ${new Date(result.nextUpdate).toLocaleString('tr-TR')}`);
-                            if (result.cacheInfo?.fromCache) {
-                                console.log(`💾 Cache'den sunuluyor (${result.cacheInfo.remainingMinutes} dakika sonra yenilenecek)`);
+                            if (result.stats) {
+                                console.log(`📊 İstatistikler:`, result.stats);
+                                console.log(`🌍 Ülkeler:`, Object.keys(result.stats.byCountry).join(', '));
+                                console.log(`💰 Maaşlı ilanlar: ${result.stats.withSalary}`);
+                                console.log(`🏠 Remote: ${result.stats.remote}, 👔 Senior: ${result.stats.senior}`);
+                            }
+                            if (result.cacheInfo) {
+                                console.log(`⚡ API Kullanımı: ${result.cacheInfo.apiCallsUsed}/${result.cacheInfo.apiCallsLimit}`);
+                                console.log(result.cacheInfo.fromCache ? 
+                                    `💾 Cache'den (${result.cacheInfo.cacheHours} saatlik)` : 
+                                    `🔄 Yeni veri çekildi`);
                             }
                             // Mevcut verilere ekle
                             setData(prevData => [...prevData, ...result.listings]);
