--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
                 const fetchListings = async () => {
                     try {
                         console.log('🌍 100.000+ iş ilanı yükleniyor...');
-                        // Yeni jobs API'sinden veri çek
-                        const response = await fetch(`https://teppek.com/api/jobs?per_page=100`);
+                        // Temiz get-jobs API'sinden veri çek
+                        const response = await fetch(`https://teppek.com/api/get-jobs?limit=100`);
                         const result = await response.json();
                         
-                        if (result.results && result.results.length > 0) {
-                            console.log(`✅ ${result.results.length} adet iş ilanı yüklendi!`);
+                        if (result.success && result.jobs && result.jobs.length > 0) {
+                            console.log(`✅ ${result.jobs.length} adet iş ilanı yüklendi!`);
                             if (result.stats) {
                                 console.log(`📊 İstatistikler:`, result.stats);
                                 console.log(`🌍 Ülkeler:`, Object.keys(result.stats.byCountry).join(', '));
@@ -264,7 +264,7 @@
                                     `🔄 Yeni veri çekildi`);
                             }
                             // API verilerini harita formatına dönüştür
-                            const formattedJobs = result.results.map(job => ({
+                            const formattedJobs = result.jobs.map(job => ({
                                 id: `job-${job.id}`,
                                 type: 'job',
                                 title: job.title,
