Fix salary display in popups - show salary section even when salary data is missing

--- a/public/index.html
+++ b/public/index.html
@@ -637,13 +637,15 @@
                                 🏢 ${item.company || item.name}
                             </div>
                             
-                            <!-- Maaş Bilgisi -->
-                            ${item.type === 'job' && (item.salary_min || item.salary_max) ? 
+                            <!-- Maaş Bilgisi veya Remote İş -->
+                            ${item.type === 'job' ? 
                                 `<div style="font-size: 15px; font-weight: bold; color: #059669; margin-bottom: 12px; padding: 8px; background-color: #f0fdf4; border-radius: 6px;">
-                                    💰 ${item.currency || 'USD'} ${item.salary_min?.toLocaleString() || '?'} - ${item.salary_max?.toLocaleString() || '?'}
+                                    ${(item.salary_min || item.salary_max) ? 
+                                        `💰 ${item.currency || 'USD'} ${item.salary_min?.toLocaleString() || '?'} - ${item.salary_max?.toLocaleString() || '?'}` :
+                                        '💰 Maaş bilgisi belirtilmemiş'
+                                    }
                                     ${item.isRemote ? '<span style="color: #059669; margin-left: 8px;">🏠 Remote</span>' : ''}
                                 </div>` : 
-                                item.isRemote ? '<div style="margin-bottom: 12px; color: #059669; font-weight: bold; padding: 8px; background-color: #f0fdf4; border-radius: 6px;">🏠 Remote İş</div>' : 
                                 ''}
                             
                             <!-- Açıklama (İlk 150 karakter) -->
