Remove duplicate company name from popup header

--- a/public/index.html
+++ b/public/index.html
@@ -638,10 +638,7 @@
                             </div>
                             
                             <!-- Şirket Adı -->
-                            <div style="font-size: 16px; font-weight: 600; color: #374151; margin-bottom: 12px; display: flex; align-items: center;">
-                                <i class="fa-solid fa-building" style="margin-right: 8px; color: #6b7280; font-size: 14px;"></i>
-                                ${item.company || item.name}
-                            </div>
+                            <!-- Başlık alanı - şirket bilgisi kaldırıldı -->
                             
                             <!-- Maaş Bilgisi (Artık tüm ilanlarda var) -->
                             <div style="font-size: 15px; font-weight: bold; color: #059669; margin-bottom: 12px; padding: 8px; background-color: #f0fdf4; border-radius: 6px; display: flex; align-items: center;">
