--- a/public/index.html
+++ b/public/index.html
@@ -538,11 +538,17 @@
 
             useEffect(() => {
                 if (mapRef.current && !mapInstance.current) {
-                    mapInstance.current = L.map(mapRef.current).setView([userLocation.lat, userLocation.lng], 10);
+                    mapInstance.current = L.map(mapRef.current, {
+                        maxBounds: [[-90, -180], [90, 180]], // Dünya sınırları
+                        maxBoundsViscosity: 1.0,              // Sert sınır
+                        minZoom: 2,                           // Minimum zoom
+                        maxZoom: 18                           // Maximum zoom
+                    }).setView([userLocation.lat, userLocation.lng], 10);
                     
                     const initialLayer = L.tileLayer(tileProviders.street.url, {
                         attribution: tileProviders.street.attribution,
-                        noWrap: true
+                        noWrap: true,
+                        bounds: [[-90, -180], [90, 180]]      // Tile sınırları
                     }).addTo(mapInstance.current);
                     setTileLayer(initialLayer);
 
