--- a/public/index.html
+++ b/public/index.html
@@ -306,7 +306,13 @@
             }, [userLocation]);
 
             useEffect(() => {
-                const handleResize = () => setIsMobile(window.innerWidth < 768);
+                const handleResize = () => {
+                    setIsMobile(window.innerWidth < 768);
+                    // Harita boyutunu güncelle
+                    if (mapInstance.current) {
+                        setTimeout(() => mapInstance.current.invalidateSize(), 100);
+                    }
+                };
                 window.addEventListener('resize', handleResize);
                 return () => window.removeEventListener('resize', handleResize);
             }, []);
@@ -566,6 +572,13 @@
 
                     clusterGroupRef.current = L.markerClusterGroup();
                     mapInstance.current.addLayer(clusterGroupRef.current);
+                    
+                    // Harita boyut sorununu çöz
+                    setTimeout(() => {
+                        if (mapInstance.current) {
+                            mapInstance.current.invalidateSize();
+                        }
+                    }, 100);
                 }
             }, []);
 
