--- a/public/index.html
+++ b/public/index.html
@@ -501,15 +501,32 @@
             const [description, setDescription] = useState('');
             const [contactInfo, setContactInfo] = useState('');
 
-            const handleSubmit = (e) => {
+            const handleSubmit = async (e) => {
                 e.preventDefault();
+                
+                // Koordinatları gerçek adrese çevir
+                let address = `${userLocation.lat.toFixed(4)}, ${userLocation.lng.toFixed(4)}`;
+                try {
+                    const response = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${userLocation.lat}&lon=${userLocation.lng}&zoom=18&addressdetails=1`);
+                    const data = await response.json();
+                    if (data.display_name) {
+                        // Şehir, ülke formatında kısa adres
+                        const parts = data.display_name.split(',').map(p => p.trim());
+                        address = parts.length > 2 ? 
+                            `${parts[0]}, ${parts[parts.length-1]}` : 
+                            data.display_name.substring(0, 50);
+                    }
+                } catch (error) {
+                    console.log('Adres çekilemedi, koordinat kullanılıyor');
+                }
+                
                 const newEntry = {
                     id: `manual-${Date.now()}`,
                     type: entryType,
                     title,
                     description,
                     location: { lat: userLocation.lat, lng: userLocation.lng }, 
-                    address: `Yeni Kayıt, ${userLocation.lat.toFixed(4)}, ${userLocation.lng.toFixed(4)}`,
+                    address: address,
                     source: 'manual', // Manuel eklenen
                     postedDate: new Date().toISOString(),
                     // Popup için ortak alanlar
