Update header button colors to match map theme: turkuaz for firma, orange for aday

--- a/public/index.html
+++ b/public/index.html
@@ -506,11 +506,11 @@
                     
                     {/* Navigation Buttons */}
                     <div className="flex items-center space-x-4">
-                        <button className="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition-colors font-semibold">
+                        <button className="bg-ilan text-white px-6 py-2 rounded-lg hover:opacity-90 transition-all font-semibold">
                             <i className="fa-solid fa-building mr-2"></i>
                             Firma Girişi
                         </button>
-                        <button className="bg-green-600 text-white px-6 py-2 rounded-lg hover:bg-green-700 transition-colors font-semibold">
+                        <button className="bg-cv text-white px-6 py-2 rounded-lg hover:opacity-90 transition-all font-semibold">
                             <i className="fa-solid fa-user mr-2"></i>
                             Aday Girişi
                         </button>
